[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tree/0px/51.png" type="Texture" id=1]
[ext_resource path="res://assets/tree/TreeG1.png" type="Texture" id=2]
[ext_resource path="res://assets/tree/TreeG3.png" type="Texture" id=3]
[ext_resource path="res://assets/tree/TreeG2.png" type="Texture" id=4]
[ext_resource path="res://script/RigidBody2D.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[node name="Seed" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 0
script = ExtResource( 5 )

[node name="CollisionShapeNG" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, -3 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="CollisionShapeG3" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, -28 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionShapeG2" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, -16 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionShapeG1" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, -4 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="SpriteSeed" type="Sprite" parent="RigidBody2D"]
z_index = -1
texture = ExtResource( 1 )

[node name="SpriteG1" type="Sprite" parent="RigidBody2D"]
visible = false
position = Vector2( 0, -4 )
z_index = -1
texture = ExtResource( 2 )

[node name="SpriteG2" type="Sprite" parent="RigidBody2D"]
visible = false
position = Vector2( 0, -10 )
z_index = -1
texture = ExtResource( 4 )

[node name="SpriteG3" type="Sprite" parent="RigidBody2D"]
visible = false
position = Vector2( 0, -16 )
z_index = -1
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShapeNG2" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( 0, -3 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_entered"]
